--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -14,7 +14,13 @@
     <a href="/">Home</a>
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
+    <h1>Blog</h1>
 
-    <h1>My Astro Site</h1>
+    <p>This is where I will post about my learning journey with Astro.</p>
+
+    <p>
+      This site will update as I complete more of the tutorial, so keep checking
+      back and see how my journey is going!
+    </p>
   </body>
 </html>
